--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,7 @@
         --fs-40: calc(40 / 16 * 1rem);
         --fs-32: calc(32 / 16 * 1rem);
         --fs-28: calc(28 / 16 * 1rem);
+        --fs-24: calc(24 / 16 * 1rem);
         --fs-20: calc(20 / 16 * 1rem);
         --fs-18: calc(18 / 16 * 1rem);
         --fs-16: calc(16 / 16 * 1rem);
@@ -47,7 +48,10 @@
         --fs-destination-p: var(--fs-15);
         --fs-destination-value: var(--fs-28);
 
-        --fs-crew-h1: var(--fs-144);
+        --fs-crew-h1: var(--fs-24);
+        --fs-crew-h2: var(--fs-18);
+        --fs-crew-h3: var(--fs-16);
+        --fs-crew-hp: var(--fs-15);
 
         --fs-technology-h1: var(--fs-144);
 
@@ -60,6 +64,11 @@
             --fs-destination-h2: var(--fs-20);
             --fs-destination-h3: var(--fs-16);
             --fs-destination-p: var(--fs-16);
+
+            --fs-crew-h1: var(--fs-40);
+            --fs-crew-h2: var(--fs-24);
+            --fs-crew-h3: var(--fs-20);
+            --fs-crew-hp: var(--fs-16);
         }
 
         @media (min-width: 1100px) {
@@ -68,6 +77,11 @@
             --fs-destination-h1: var(--fs-96);
             --fs-destination-h2: var(--fs-28);
             --fs-destination-p: var(--fs-18);
+
+            --fs-crew-h1: var(--fs-56);
+            --fs-crew-h2: var(--fs-32);
+            --fs-crew-h3: var(--fs-28);
+            --fs-crew-hp: var(--fs-18);
         }
     }
 }
@@ -545,6 +559,173 @@
                 grid-template-areas:
                     "upper middle"
                     "upper lower";
+            }
+        }
+    }
+
+    .crew {
+        width: 100vw;
+        height: 100vh;
+        /* overflow: hidden; */
+
+        h1 {
+            font-family: var(--ff-bellefair);
+            font-size: var(--fs-crew-h1);
+            text-transform: uppercase;
+        }
+
+        h2 {
+            font-family: var(--ff-bellefair);
+            font-size: var(--fs-crew-h2);
+            color: #d0d6f948;
+            text-transform: uppercase;
+        }
+
+        h3 {
+            font-family: var(--ff-barlow-cond);
+            font-size: var(--fs-crew-h3);
+            text-transform: uppercase;
+            letter-spacing: 4px;
+        }
+
+        p {
+            font-family: var(--ff-barlow);
+            font-size: var(--fs-crew-p);
+            color: var(--c-blue-300);
+            line-height: 180%;
+        }
+
+        .crew_hero {
+            margin-top: 88px;
+            padding-block: 24px;
+            text-align: center;
+
+            h3 {
+                margin-bottom: 24px;
+
+                span {
+                    margin-right: 24px;
+                    opacity: 0.6;
+                    font-weight: bold;
+                }
+
+                @media (min-width: 700px) {
+                    text-align: left;
+                }
+            }
+
+            h2 {
+                margin-top: 40px;
+
+                @media (min-width: 700px) {
+                    margin-bottom: 16px;
+                }
+
+                @media (min-width: 1100px) {
+                    margin-top: 197px;
+                }
+            }
+
+            h1 {
+                margin-bottom: 24px;
+                line-height: normal;
+            }
+
+            p {
+                height: 164px;
+                margin-bottom: 24px;
+
+                @media (min-width: 700px) {
+                    height: 117px;
+                }
+
+                @media (min-width: 1100px) {
+                    height: 96px;
+                }
+            }
+
+            .upper {
+                .dots {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    gap: 16px;
+
+                    li {
+                        width: 10px;
+                        height: 10px;
+
+                        @media (min-width: 1100px) {
+                            width: 15px;
+                            height: 15px;
+                        }
+                    }
+
+                    @media (min-width: 1100px) {
+                        justify-content: left;
+                        gap: 40px;
+                    }
+                }
+
+                .content {
+                    @media (min-width: 700px) {
+                        width: 512px;
+                        margin-inline: auto;
+                    }
+
+                    @media (min-width: 1100px) {
+                        text-align: left;
+                        margin-inline: 0;
+                        margin-right: auto;
+
+                        .description {
+                            height: 480px;
+                        }
+                    }
+                }
+            }
+
+            .lower {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                margin-top: 32px;
+
+                img {
+                    height: 340px;
+
+                    @media (min-width: 700px) {
+                        height: 560px;
+                        -webkit-mask-image: linear-gradient(
+                            to bottom,
+                            black 80%,
+                            transparent 100%
+                        );
+                        mask-image: linear-gradient(
+                            to bottom,
+                            black 80%,
+                            transparent 100%
+                        );
+                    }
+
+                    @media (min-width: 1100px) {
+                        width: 676px;
+                        height: auto;
+                    }
+                }
+            }
+
+            @media (min-width: 700px) {
+                margin-top: 96px;
+                padding-block: 32px;
+            }
+
+            @media (min-width: 1100px) {
+                margin-top: 136px;
+                padding-block: 48px;
+                display: grid;
+                grid-template-columns: repeat(2, 1fr);
+                gap: 40px;
             }
         }
     }
